--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,6 +114,10 @@
                 android:textColor="@color/secondary"
                 android:textSize="@dimen/drawer_secondary_text"
                 android:textStyle="normal" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/frame"></FrameLayout>
 
         </RelativeLayout>
     </LinearLayout>
